--- a/src/containers/Header/HeaderContainer.css
+++ b/src/containers/Header/HeaderContainer.css
@@ -3,11 +3,23 @@
 }
 
 .menu > a {
-    color: #fff;
+    color: #fff !important;
     display: inline !important;
     font-size: 15px;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
+    margin-right: 30px;
+}
+
+.menu > a:last-child{
+    margin-right: 0;
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+}
+
+.menu > a:hover {
+    color: #F84842 !important;
 }
 
 .logo {
@@ -15,12 +27,15 @@
 }
 
 header {
-    /* Estilos para tu encabezado */
     position: fixed;
     width: 100%;
-    height: 80px; /* Ajusta según el tamaño de tu encabezado */
-    z-index: 1; /* Asegura que el encabezado esté por encima del carrusel */
+    height: 80px; 
+    z-index: 1; 
 }
+
+header.scrolled {
+    background-color: #333; 
+  }
 
 .social-button > a > svg {
     color: #fff;
