--- a/src/containers/Services/ServicesContainer.css
+++ b/src/containers/Services/ServicesContainer.css
@@ -1,3 +1,31 @@
+.services {
+    height: 534px;
+    background-color: #D9D9D9;
+}
+
+.services > div > div > div:first-child {
+    margin-top: 108px;
+}
+
+.services > div > div > div > h1 {
+    margin-bottom: 38px;
+    font-family: "Roboto", sans-serif;
+    font-size: 60px;
+    font-weight: 900;
+}
+
+.services > div > div > div > p {
+    color: #828282;
+    line-height: 2;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+}
+
+.services > div > div > div {
+    width: 479px;
+    margin-right: 110px;
+}
+
 .services-items {
     margin-top: 61px;
 }
@@ -5,6 +33,26 @@
 .services-item {
     width: 180px;
     height: 180px;
+    background-color: #F84842 !important;
+    border: solid 1px #F84842 !important;
+}
+
+
+/* .services-item svg {
+    height: 63.2px !important;
+ }
+
+ .services-item svg:nth-child(2) {
+    height: 24px !important;
+ } */
+
+.services-item p {
+    font-size: 15px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
 
 .services-items > div > div > button:first-child {
